--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,21 @@
         <maven.compiler.target>22</maven.compiler.target>
         <exec.mainClass>com.mycompany.footballroyale.FootballRoyale</exec.mainClass>
     </properties>
+    <dependencies>
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>6.4.4.Final</version>
+    </dependency>
+    <dependency>
+    <groupId>org.mindrot</groupId>
+    <artifactId>jbcrypt</artifactId>
+    <version>0.4</version>
+</dependency>
+    <dependency>
+        <groupId>com.mysql</groupId>
+        <artifactId>mysql-connector-j</artifactId>
+        <version>8.3.0</version>
+    </dependency>
+</dependencies>
 </project>
