--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
         <maven.compiler.target>22</maven.compiler.target>
         <exec.mainClass>com.mycompany.footballroyale.FootballRoyale</exec.mainClass>
     </properties>
+    <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.2.2</version> <relativePath/> </parent>
     <dependencies>
     <dependency>
         <groupId>org.hibernate</groupId>
@@ -21,6 +25,10 @@
     <groupId>org.mindrot</groupId>
     <artifactId>jbcrypt</artifactId>
     <version>0.4</version>
+</dependency>
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
 </dependency>
     <dependency>
         <groupId>com.mysql</groupId>
